# ForenScope

./: .gitignore  Caddyfile  README.md  SECURITY.md  demo.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  dump.rdb  mkdocs.yml  professional_rebuild.py  pyproject.toml  verify_expansion.py
.github/workflows/: test.yml
docker/: api.Dockerfile  docker-compose.yml  tools.Dockerfile  worker.Dockerfile
docs/: api.md  concepts.md  index.md  modules.md  security.md
rules/yara/: README.md  default.yar
scripts/: verify_auth.py  verify_osint.py
site/: 404.html  index.html
site/api/: index.html
site/concepts/: index.html
site/modules/: index.html
site/search/: search_index.json
site/security/: index.html
src/dfirlab/: actions.py  case.py  cli.py  config.py  custody.py  db.py  entropy.py  evidence.py  hashing.py  inventory.py  json_utils.py  logging_utils.py  malware_helpers.py  manifest.py  paths.py  store.py  strings_util.py  time_utils.py  timeline.py  triage.py  utils.py
src/eviforge/: cli.py  config.py  doctor.py  worker.py
src/eviforge/api/: main.py
src/eviforge/api/routes/: admin.py  artifacts.py  auth.py  cases.py  evidence.py  health.py  iocs.py  jobs.py  osint.py  web.py  webdev.py
src/eviforge/api/static/: app.css
src/eviforge/api/templates/: ack.html  admin.html  base.html  case.html  index.html  job.html  osint.html
src/eviforge/api/templates/admin/: index.html  login.html  tools.html
src/eviforge/core/: audit.py  auth.py  custody.py  db.py  hashing.py  indexer.py  ingest.py  jobs.py  models.py  sanitize.py
src/eviforge/modules/: base.py  browser.py  bulk.py  carve.py  email.py  evtx.py  pcap.py  registry.py  reports.py  verification.py  yara.py
tests/: test_custody_hashchain.py  test_hashing.py  verify_core.py
